# annotiq

./: .dockerignore  .env  .env.example  .gitignore  README.md  Run.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  verify_tables.py
backend/alembic/: env.py
backend/alembic/versions/: ced523bcf5dd_initial_schema.py
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  deps.py  search.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: auth.py  intelligence.py
backend/app/services/: auth_service.py  embedding_service.py  search_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_intelligence.py  test_models.py  test_search.py
frontend/: .env.example  package-lock.json  package.json
frontend/__tests__/: meeting-detail.test.tsx  search.test.tsx  upload.test.tsx
frontend/app/: globals.css  page.tsx  providers.tsx
frontend/app/meetings/[id]/: page.tsx
frontend/app/meetings/upload/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: CustomCursor.tsx  InteractiveBackground.tsx
frontend/components/meeting/: ActionItems.tsx  SpeakerRenameModal.tsx  StatusBanner.tsx  TranscriptViewer.tsx
frontend/components/search/: MeetingCard.tsx  ResultGroup.tsx  SearchAnalytics.tsx  SearchBar.tsx
frontend/components/ui/: progress.tsx
infra/: docker-compose.yml
workers/: .env.example  Dockerfile  celery_worker.py
